Bug 373954 Cannot send any attachment files which are attached in original message when I forward a mail as inline r+sr=bienvenu